2007-05-26  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Oliver Hunt.

        - finish fixing http://bugs.webkit.org/show_bug.cgi?id=13871
          Box shadow should not apply to Aqua-themed controls

        Covered by fast/forms/box-shadow-override.html

        I forgot to include adjustSliderThumbStyle in the previous patch and the
        test didn't detect it because of a bug introduced in r21739.

        * rendering/RenderThemeMac.h:
        * rendering/RenderThemeMac.mm:
        (WebCore::RenderThemeMac::adjustSliderThumbStyle):

2007-05-26  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13876
          Box-Shadow disappears if shadow doesn't fit in the window size

        Tests: fast/repaint/box-shadow-h.html
               fast/repaint/box-shadow-v.html

        * rendering/RenderTable.cpp:
        (WebCore::RenderTable::layout):

2007-05-26  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=13605
        REGRESSION: Browser crashes when switching Kotoeri input modes

        The problem could no longer be reproduced with Kotoeri thanks to
        a fix in <http://trac.webkit.org/projects/webkit/changeset/21728>,
        but we still need to protect from invalid ranges passed from
        input methods.

        Test: editing/input/replace-invalid-range.html

        * page/mac/WebCoreFrameBridge.mm:
        (-[WebCoreFrameBridge selectNSRange:]): Added a null check.

2007-05-26  Darin Adler  <darin@apple.com>

        * platform/network/mac/ResourceResponseMac.mm:
        (WebCore::ResourceResponse::doUpdateResourceResponse):
        Alexey pointed out that I was wrong about object lifetime, so
        rolling this change out.

2007-05-26  Darin Adler  <darin@apple.com>

        Reviewed by Anders.

        * platform/network/mac/ResourceResponseMac.mm:
        (WebCore::ResourceResponse::doUpdateResourceResponse):